# AGENT_SDK

agent/: pyproject.toml
agent/src/agent/: agent_with_historychainlit.py  agent_with_simplechainlit.py  agent_with_streamchainlit.py  chainlit.py  simple_agent_async.py  simple_agent_stream.py  simple_agent_sync.py
agent_wihout_runconfig/: pyproject.toml
agent_wihout_runconfig/src/agent/: __init__.py  agent.py
assigments/: pyproject.toml
assigments/src/assigments/: __init__.py  agent_with_fastapi.py  agents_assigment.py  chainlit.py  chainlit1.py
class_assigment/: pyproject.toml
class_assigment/src/class_assigment/: __init__.py  assigment_chainlit.py  assingment.py
con_text/: pyproject.toml
con_text/src/con_text/: __init__.py  con_text.py
litellm/: pyproject.toml
litellm/src/litellm/: __init__.py  litellm.py
open_router/: pyproject.toml
open_router/src/open_router/: .env  __init__.py  open-router.py  open_router1.py  openrouter_sdk.py
