[project]
name = "agent-litellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owaisyosuf", email = "owais.251990@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.67.4.post1",
    "openai-agents>=0.0.13",
]

[project.scripts]
agent-litellm = "agent_litellm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
