[project]
name = "con-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owaisyosuf", email = "owais.251990@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.15",
]

[project.scripts]
con-text = "con_text:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
